chore: prepare initial release with package structure and documentation

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Knut W. Horne",
+            "name": "Knut Horne",
             "email": "kh@gets.no",
             "homepage": "https://kwhorne.com",
             "role": "Developer"
